[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/MultiplayerLobby.gd" type="Script" id=1]

[node name="MultiplayerLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 200.0
custom_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 300.0
margin_bottom = 98.0
text = "ALIEN CATACOMBS - MULTIPLAYER"
align = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 300.0
margin_bottom = 122.0
text = "Host or Join a game"
align = 1

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 300.0
margin_bottom = 156.0
placeholder_text = "Server IP (127.0.0.1 for local)"

[node name="HostButton" type="Button" parent="VBoxContainer"]
margin_top = 166.0
margin_right = 300.0
margin_bottom = 186.0
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 300.0
margin_bottom = 216.0
text = "Join Game"

[node name="PlayerList" type="ItemList" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 300.0
margin_bottom = 306.0
rect_min_size = Vector2( 0, 80 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 316.0
margin_right = 300.0
margin_bottom = 336.0
text = "Start Game"
